delete reply server and client side added, adjusted TextArea inputs for reply to have minRow and autosize, fixed saved post not showing up for other users, edit and delete only show for that users reply

--- a/code-databank-refactor/src/components/Feed/FeedCard-Styles.css
+++ b/code-databank-refactor/src/components/Feed/FeedCard-Styles.css
@@ -1,3 +1,7 @@
+a {
+  color: rgba(0, 0, 0, 0.85);
+}
+
 /* ellipsis */
 .settings-button {
   border: none;
@@ -103,6 +107,21 @@ i {
 
 .code-container {
   padding: 0 15px 5px 15px;
+}
+
+.reply-footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.reply-footer h5 {
+  padding: 0 5px 0 5px;
+}
+
+.reply-footer-actions {
+  display: flex;
+  flex-direction: row;
 }
 
 .post-footer {
